# fastAPI

./: main.py  pyproject.toml  testes.py
.github/workflows/: main.yml
